# c5-project

./: .dockerignore  .gitignore  .travis.yml  README.md  build.sh
.github/workflows/: build.yml  project.yml
aws/: cloudwatch.sh  mkcluster.sh
backend/: Cargo.toml  Dockerfile
backend/base/: Dockerfile
backend/common/: Cargo.toml
backend/common/src/: config.rs  jwt.rs  lib.rs  passwords.rs
backend/common/src/aws/: mod.rs  s3.rs  sqs.rs
backend/common_web/: Cargo.toml
backend/common_web/migrations/2021-12-22-210308_FeedItem/: down.sql  up.sql
backend/common_web/migrations/2021-12-22-210312_User/: up.sql
backend/common_web/src/: database.rs  lib.rs  messages.rs  router.rs  schema.rs
backend/common_web/src/guards/: isloggedin.rs  mod.rs
backend/common_web/src/models/: feed.rs  mod.rs  users.rs
backend/feed/: Cargo.toml  Dockerfile
backend/feed/src/: controller.rs  main.rs  requests.rs  responses.rs
backend/imgproc/: Cargo.toml  Dockerfile
backend/imgproc/src/: main.rs  message.rs
backend/users/: Cargo.toml  Dockerfile
backend/users/src/: main.rs  requests.rs  responses.rs
backend/users/src/controllers/: auth.rs  mod.rs
deploy/: feed-api.yaml  frontend.yaml  imgproc.yaml  reverseproxy.yaml  secret.yaml  user-api.yaml
docker/: docker-compose-build-phase1.yaml  docker-compose-build-phase2.yaml  docker-compose.yaml
tests/: c5-project-api.postman_collection.json  test-registeruser.sh  test-workflow.sh
