[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = "1.0"
email_address = "0.2"
jsonwebtoken = "7"
dotenv = "0.15.0"

rand_core = { version = "0.6", features = ["std"] }
argon2 = "0.3"

serde = { version = "1.0", features = ["derive"] }

aws-config  = "0.9"
aws-sdk-s3  = "0.9"
aws-sdk-sqs = "0.9"
aws-types   = "0.9"
