[package]
name = "common_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
actix-web = { version = "4" }

diesel = { version = "1.4", features = [ "postgres", "r2d2" ] }
diesel_migrations = { version = "1.4" }

r2d2 = { version = "0.8" }
log = { version = "0.4" }

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

chrono = { version = "0.4", features = [ "serde" ] }
