[package]
name = "imgproc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
common_web = { path = "../common_web" }
serde_json = "1.0"

tokio = { version = "1.0", features = [ "macros", "rt-multi-thread", "fs", "io-util" ] }
tokio-stream = { version = "0.1" }

reqwest = { version = "0.11", features = [ "brotli", "stream" ] }

image = "0.24"

env_logger = "0.9"
log = "0.4"
